New HTML/FO: Add Korean translation, and add better comment to polish translation
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3138 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/ko.xml
+++ b/xslt_suse2/common/l10n/ko.xml
@@ -8,41 +8,41 @@
    <l:gentext key="Authors"         text="&#51089;&#49457;&#51088;"/>
    <l:gentext key="TableofContents" text="&#47785;&#52264;"/>
    <l:gentext key="ListofAuthors" text="&#51200;&#51088; &#47785;&#47197;"/>
-   <l:gentext key="Contributor"     text="Contributor"/>
-   <l:gentext key="Contributors"    text="Contributors"/>
+   <l:gentext key="Contributor"     text="기여자"/>
+   <l:gentext key="Contributors"    text="기여자"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; &#48736;&#47480;&#32;&#49884;&#51089;&#32;&#52852;&#46300;"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
-   <l:gentext key="FlyerMadeby"  text="SUSE&#x00AE; with XSL-FO&#50640;&#32;&#51032;&#54644;&#32;&#49373;&#49457;&#46120;"/>   
+   <l:gentext key="FlyerMadeby"  text="SUSE&#x00AE; with XSL-FO&#50640;&#32;&#51032;&#54644;&#32;&#49373;&#49457;&#46120;"/>
 
    <l:gentext key="admonseparator"  text=": "/>
 
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
-   <l:dingbat key="guimenuendquote" text=""/>   
+   <l:dingbat key="guimenuendquote" text=""/>
 
-   <l:gentext key="selectlanguage" text="Select Language"/>
-   <l:gentext key="selectformat" text="Select Format"/>
-   <l:gentext key="formathtml" text="Web Pages"/>
-   <l:gentext key="formatsinglehtml" text="Single Web Page"/>
+   <l:gentext key="selectlanguage" text="언어 선택"/>
+   <l:gentext key="selectformat" text="형식 선택"/>
+   <l:gentext key="formathtml" text="웹 페이지"/>
+   <l:gentext key="formatsinglehtml" text="단일 웹 페이지"/>
    <l:gentext key="formatpdf" text="PDF"/>
-   <l:gentext key="formatepub" text="E-Book (EPUB)"/>
-   <l:gentext key="contentsoverview" text="Contents"/>
-   <l:gentext key="showcontentsoverview" text="Show Contents"/>
-   <l:gentext key="find" text="Find"/>
-   <l:gentext key="navigation" text="Navigation"/>
-   <l:gentext key="sharethispage" text="Share this page: "/>
+   <l:gentext key="formatepub" text="전자책(EPUB)"/>
+   <l:gentext key="contentsoverview" text="목차"/>
+   <l:gentext key="showcontentsoverview" text="목차 표시"/>
+   <l:gentext key="find" text="찾기"/>
+   <l:gentext key="navigation" text="탐색"/>
+   <l:gentext key="sharethispage" text="이 페이지 공유: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="shareviagoogleplus" text="Google+"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
-   <l:gentext key="shareviaemail" text="E-Mail"/>
-   <l:gentext key="printthispage" text="Print this page"/>
+   <l:gentext key="shareviaemail" text="전자 메일"/>
+   <l:gentext key="printthispage" text="이 페이지 인쇄"/>
    <l:gentext key="susecareers" text="Careers"/>
    <l:gentext key="suselegal" text="Legal"/>
    <l:gentext key="suseabout" text="About"/>
    <l:gentext key="susecontact" text="Contact Us"/>
-   <l:gentext key="version.info" text="Applies to "/>
-   <l:gentext key="totopofpage" text="Top"/>
+   <l:gentext key="version.info" text="적용 대상 "/>
+   <l:gentext key="totopofpage" text="맨 위로"/>
 
 
    <!-- WARNING: 
