--- a/xslt_suse2/common/l10n/pl.xml
+++ b/xslt_suse2/common/l10n/pl.xml
@@ -7,7 +7,8 @@
    <l:gentext key="Authors" text="Autorzy"/>
    <l:gentext key="TableofContents" text="Spis treści"/>
    <l:gentext key="ListofAuthors" text="Lista autorów"/>
-   <!-- The following two will need better translation-->
+   <!-- The following two may need better translation. Google Translate does
+        the same though. -->
    <l:gentext key="Contributor"     text="Autor"/>
    <l:gentext key="Contributors"    text="Autorzy"/>
 
