Corrected guimenustartquote and guimenuendquote for Japanese. Thanks to Patrick!
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3141 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt/common/l10n/ja.xml
+++ b/xslt/common/l10n/ja.xml
@@ -12,9 +12,9 @@
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="Created by SUSE&#x00AE; with XSL-FO"/>
    
-   <!-- In most cases, this has to be empty -->
-   <l:dingbat key="guimenustartquote" text=""/>
-   <l:dingbat key="guimenuendquote" text=""/>   
+
+   <l:dingbat key="guimenustartquote" text="&#65339;"/>
+   <l:dingbat key="guimenuendquote" text="&#65341;"/>
  
   <l:gentext key="Question" text="質問:"/>
   <l:gentext key="question" text="質問:"/>
