--- a/xslt_suse2/common/l10n/ja.xml
+++ b/xslt_suse2/common/l10n/ja.xml
@@ -16,9 +16,9 @@
 
    <l:gentext key="admonseparator"  text=": "/>
 
-   <!-- In most cases, this has to be empty -->
-   <l:dingbat key="guimenustartquote" text=""/>
-   <l:dingbat key="guimenuendquote" text=""/>   
+
+   <l:dingbat key="guimenustartquote" text="&#65339;"/>
+   <l:dingbat key="guimenuendquote" text="&#65341;"/>
 
    <l:gentext key="selectlanguage" text="言語の選択"/>
    <l:gentext key="selectformat" text="フォーマットの選択"/>
