--- a/xslt/common/l10n/l10n.xml
+++ b/xslt/common/l10n/l10n.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0'?>
 <!DOCTYPE l:i18n SYSTEM "l10n.dtd" [
-   <!-- <!ENTITY ar SYSTEM "ar.xml"> -->
+   <!ENTITY ar SYSTEM "ar.xml">
    <!ENTITY cs SYSTEM "cs.xml">
    <!ENTITY cz SYSTEM "cz.xml">
    <!ENTITY da SYSTEM "da.xml">
