Applied patch from Marguerite for Chinese language files. Many thanks!
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3205 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/zh_cn.xml
+++ b/xslt_suse2/common/l10n/zh_cn.xml
@@ -46,15 +46,15 @@
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
-   <l:gentext key="fop1.body.font.family" text="suse.serif,FreeSerif,Chinese,serif"/>
-   <l:gentext key="fop1.sans.font.family" text="suse.sans,Chinese,FreeSans,sansserif"/>
-   <l:gentext key="fop1.monospace.font.family" text="suse_mono,ChineseMono"/>
+   <l:gentext key="fop1.body.font.family" text="suse.serif,FreeSerif,'WenQuanYi Micro Hei',serif"/>
+   <l:gentext key="fop1.sans.font.family" text="suse.sans,'WenQuanYi Micro Hei',FreeSans,sansserif"/>
+   <l:gentext key="fop1.monospace.font.family" text="suse_mono,'WenQuanYi Micro Hei Mono'"/>
    <l:gentext key="fop1.symbol.font.family" text="Symbol,ZapfDingbats"/>
    <l:gentext key="fop1.callout.unicode.font" text="Dingbats"/>
    <!-- Pocket layout: -->
-   <l:gentext key="fop1.pocket.body.font.family" text="LiberationSans,sansserif"/>
-   <l:gentext key="fop1.pocket.sans.font.family" text="LiberationSans,sansserif"/>
-   <l:gentext key="fop1.pocket.monospace.font.family" text="FreeMono,DejaVuSansMono,suse.mono"/>
+   <l:gentext key="fop1.pocket.body.font.family" text="LiberationSans,'WenQuanYi Micro Hei',sansserif"/>
+   <l:gentext key="fop1.pocket.sans.font.family" text="LiberationSans,'WenQuanYi Micro Hei',sansserif"/>
+   <l:gentext key="fop1.pocket.monospace.font.family" text="FreeMono,DejaVuSansMono,suse.mono,'WenQuanYi Micro Hei Mono'"/>
    <l:gentext key="fop1.pocket.symbol.font.family" text="Symbol,ZapfDingbats"/>
    <l:gentext key="fop1.pocket.callout.unicode.font" text="Dingbats"/>
 
