--- a/xslt/common/l10n/lt_lt.xml
+++ b/xslt/common/l10n/lt_lt.xml
@@ -33,21 +33,21 @@
    <l:gentext key="fop1.symbol.font.family" text="Symbol,ZapfDingbats"/>
    <l:gentext key="fop1.callout.unicode.font" text="Dingbats"/>
    <!-- Pocket layout: -->
-   <l:gentext key="fop1.pocket.body.font.family" text="LiberationSans,sansserif"/>
-   <l:gentext key="fop1.pocket.sans.font.family" text="LiberationSans,sansserif"/>
+   <l:gentext key="fop1.pocket.body.font.family" text="LiberationSans,sans-serif"/>
+   <l:gentext key="fop1.pocket.sans.font.family" text="LiberationSans,sans-serif"/>
    <l:gentext key="fop1.pocket.monospace.font.family" text="FreeMono,DejaVuSansMono,suse.mono"/>
    <l:gentext key="fop1.pocket.symbol.font.family" text="Symbol,ZapfDingbats"/>
    <l:gentext key="fop1.pocket.callout.unicode.font" text="Dingbats"/>
 
    <!-- Normal layout: -->
    <l:gentext key="xep.body.font.family" text="suse.serif,serif"/>
-   <l:gentext key="xep.sans.font.family" text="suse.sans,sansserif"/>
+   <l:gentext key="xep.sans.font.family" text="suse.sans,sans-serif"/>
    <l:gentext key="xep.monospace.font.family" text="monospace"/>
    <l:gentext key="xep.symbol.font.family" text="Symbol,ZapfDingbats"/>
    <l:gentext key="xep.callout.unicode.font" text="Dingbats"/>
    <!-- Pocket layout:  -->
-   <l:gentext key="xep.pocket.body.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,MPlusSans,sansserif"/>
-   <l:gentext key="xep.pocket.sans.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,MPlusSans,sansserif"/>
+   <l:gentext key="xep.pocket.body.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,MPlusSans,sans-serif"/>
+   <l:gentext key="xep.pocket.sans.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,MPlusSans,sans-serif"/>
    <l:gentext key="xep.pocket.monospace.font.family" text="MPlusMono,LiberationMono,monospace"/>
    <l:gentext key="xep.pocket.symbol.font.family" text="Symbol,ZapfDingbats"/>
    <l:gentext key="xep.pocket.callout.unicode.font" text="DejaVuSansCond,Dingbats"/>
