New XSL: Uncomment Arabic translation - we now have one, thanks to Tom/Frank/Padraig
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3301 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/l10n.xml
+++ b/xslt_suse2/common/l10n/l10n.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0'?>
 <!DOCTYPE l:i18n SYSTEM "l10n.dtd" [
-   <!-- <!ENTITY ar SYSTEM "ar.xml"> -->
+   <!ENTITY ar SYSTEM "ar.xml">
    <!ENTITY cs SYSTEM "cs.xml">
    <!ENTITY cz SYSTEM "cz.xml">
    <!ENTITY da SYSTEM "da.xml">
@@ -26,7 +26,7 @@
 ]>
 
 <l:i18n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0">
-   <!--&ar;-->
+   &ar;
    &cs;
    &da;
    &de;
