--- a/xslt_suse2/common/l10n/es.xml
+++ b/xslt_suse2/common/l10n/es.xml
@@ -47,35 +47,6 @@
    <l:gentext key="version.info" text="Se aplica a "/>
    <l:gentext key="totopofpage" text="Inicio"/>
 
-
-   <!-- WARNING: 
-     Change the following lines only, if you know what you are do!
-   -->
-   <l:gentext key="fop1.body.font.family" text="FreeSerif,DejaVuSerif,suse.serif"/>
-   <l:gentext key="fop1.sans.font.family" text="FreeSans,DejaVuSans,suse.sans"/>
-   <l:gentext key="fop1.monospace.font.family" text="FreeMono,DejaVuSansMono,suse.mono"/>
-   <l:gentext key="fop1.symbol.font.family" text="Symbol,ZapfDingbats"/>
-   <l:gentext key="fop1.callout.unicode.font" text="Dingbats"/>
-   <!-- Pocket layout: -->
-   <l:gentext key="fop1.pocket.body.font.family" text="LiberationSans,sansserif"/>
-   <l:gentext key="fop1.pocket.sans.font.family" text="LiberationSans,sansserif"/>
-   <l:gentext key="fop1.pocket.monospace.font.family" text="FreeMono,DejaVuSansMono,suse.mono"/>
-   <l:gentext key="fop1.pocket.symbol.font.family" text="Symbol,ZapfDingbats"/>
-   <l:gentext key="fop1.pocket.callout.unicode.font" text="Dingbats"/>
-  
-   <l:gentext key="xep.body.font.family" text="suse.serif,serif"/>
-   <l:gentext key="xep.sans.font.family" text="suse.sans,sansserif"/>
-   <l:gentext key="xep.monospace.font.family" text="monospace"/>
-   <l:gentext key="xep.symbol.font.family" text="Symbol,ZapfDingbats"/>
-   <l:gentext key="xep.callout.unicode.font" text="Dingbats"/>
-   <!-- Pocket layout:  -->
-   <l:gentext key="xep.pocket.body.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,MPlusSans,sansserif"/>
-   <l:gentext key="xep.pocket.sans.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,MPlusSans,sansserif"/>
-   <l:gentext key="xep.pocket.monospace.font.family" text="MPlusMono,LiberationMono,monospace"/>
-   <l:gentext key="xep.pocket.symbol.font.family" text="Symbol,ZapfDingbats"/>
-   <l:gentext key="xep.pocket.callout.unicode.font" text="DejaVuSansCond,Dingbats"/>
-   <!-- /WARNING -->
-
    <l:gentext key="part" text="Parte"/>
 
    <l:context name="styles">
@@ -114,14 +85,6 @@
       <l:template name="section" text="Secci&#243;n&#160;&#8220;%t&#8221;"/>
       <l:template name="simplesect" text="secci&#243;n llamada &#8220;%t&#8221;"/>
    </l:context>
-
-   <!--   <l:context name="title">
-      <l:template name="caution" text="ATENCI&#211;N: %t"/>
-      <l:template name="note" text="NOTA: %t"/>
-      <l:template name="tip" text="SUGERENCIA: %t"/>
-      <l:template name="warning" text="AVISO: %t"/>
-   </l:context>-->
-
 
    <l:context name="xref-number-and-title">
       <l:template name="appendix" style="nonumber" text="Ap&#233;ndice&#160;%t"/>
@@ -189,7 +152,8 @@
       <l:template name="home" text="Inicio"/>
       <l:template name="insert" text="Insert"/>
       <l:template name="left" text="&#x02190;"/><!-- larr -->
-      <l:template name="meta" text="Alt"/><!-- Correct??? -->
+      <l:template name="meta" text="Meta"/>
+      <!-- <l:template name="meta" text="Alt"/> Correct??? -->
       <!--       <l:template name="option" text=""/> -->
       <l:template name="other" text="???"/>
       <l:template name="pagedown" text="P&#xe1;gina &#x02193;"/>
