Remove mplus-fonts dependency from older stylesheets + remove comment around &ar; Arabic entity
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3305 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt/common/l10n/es.xml
+++ b/xslt/common/l10n/es.xml
@@ -45,9 +45,9 @@
    <l:gentext key="xep.symbol.font.family" text="Symbol,ZapfDingbats"/>
    <l:gentext key="xep.callout.unicode.font" text="Dingbats"/>
    <!-- Pocket layout:  -->
-   <l:gentext key="xep.pocket.body.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,MPlusSans,sans-serif"/>
-   <l:gentext key="xep.pocket.sans.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,MPlusSans,sans-serif"/>
-   <l:gentext key="xep.pocket.monospace.font.family" text="MPlusMono,LiberationMono,monospace"/>
+   <l:gentext key="xep.pocket.body.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,sans-serif"/>
+   <l:gentext key="xep.pocket.sans.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,sans-serif"/>
+   <l:gentext key="xep.pocket.monospace.font.family" text="LiberationMono,monospace"/>
    <l:gentext key="xep.pocket.symbol.font.family" text="Symbol,ZapfDingbats"/>
    <l:gentext key="xep.pocket.callout.unicode.font" text="DejaVuSansCond,Dingbats"/>
    <!-- /WARNING -->
