--- a/xslt/common/l10n/fr.xml
+++ b/xslt/common/l10n/fr.xml
@@ -45,9 +45,9 @@
    <l:gentext key="xep.symbol.font.family" text="Symbol,ZapfDingbats"/>
    <l:gentext key="xep.callout.unicode.font" text="Dingbats"/>
    <!-- Pocket layout:  -->
-   <l:gentext key="xep.pocket.body.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,MPlusSans,sans-serif"/>
-   <l:gentext key="xep.pocket.sans.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,MPlusSans,sans-serif"/>
-   <l:gentext key="xep.pocket.monospace.font.family" text="MPlusMono,LiberationMono,monospace"/>
+   <l:gentext key="xep.pocket.body.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,sans-serif"/>
+   <l:gentext key="xep.pocket.sans.font.family" text="DejaVuSansCond,LiberationSans,FreeSans,sans-serif"/>
+   <l:gentext key="xep.pocket.monospace.font.family" text="LiberationMono,monospace"/>
    <l:gentext key="xep.pocket.symbol.font.family" text="Symbol,ZapfDingbats"/>
    <l:gentext key="xep.pocket.callout.unicode.font" text="DejaVuSansCond,Dingbats"/>
    <!-- /WARNING -->
