New FO: Karl uses releaseinfo in a different way than most other projects & I checked rather narrowly here -- remedy that
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3879 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/de.xml
+++ b/xslt_suse2/common/l10n/de.xml
@@ -38,6 +38,8 @@
    <l:gentext key="version.info" text="Bezieht sich auf "/>
    <l:gentext key="totopofpage" text="Seitenanfang"/>
 
+   <l:gentext key="version" text="Version"/>
+   <l:gentext key="Version" text="Version"/>
 
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
@@ -118,7 +120,7 @@
    <l:context name="msgset">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/>
-      <l:template name="command" text="&#x2318;"/> 
+      <l:template name="command" text="&#x2318;"/>
       <l:template name="control" text="Strg"/>
       <l:template name="delete" text="Entf"/>
       <l:template name="down" text="&#x02193;"/><!-- darr -->
