--- a/xslt_suse2/common/l10n/en.xml
+++ b/xslt_suse2/common/l10n/en.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" 
-   language="en" 
+<l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0"
+   language="en"
    english-language-name="English">
 
    <l:gentext key="LocalisedLanguageName" text="English"/>
@@ -39,6 +39,9 @@
    <l:gentext key="susecontact" text="Contact Us"/>
    <l:gentext key="version.info" text="Applies to "/>
    <l:gentext key="totopofpage" text="Top"/>
+
+   <l:gentext key="version" text="Version"/>
+   <l:gentext key="Version" text="Version"/>
 
 
    <!-- In most cases, this has to be empty -->
@@ -129,12 +132,12 @@
    <l:context name="title">
       <l:template name="part" text="Part&#160;%n&#160;%t"/>
    </l:context>
-   
-  <!-- 
+
+  <!--
     HACK for keycap context
     We need to keep this for some time
     See Ticket#84 and https://sf.net/tracker/index.php?func=detail&aid=3540451&group_id=21935&atid=373750
-   --> 
+   -->
    <l:context name="msgset">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/><!-- mdash -->
@@ -168,5 +171,5 @@
    <l:context name="datetime">
      <l:template name="titlepage.format" text="d b Y"/>
    </l:context>
-  
+
 </l:l10n>
