--- a/xslt_suse2/common/l10n/es.xml
+++ b/xslt_suse2/common/l10n/es.xml
@@ -9,8 +9,8 @@
    <l:gentext key="Authors"       text="Autores"/>
    <l:gentext key="Contributor"     text="Colaborador"/>
    <l:gentext key="Contributors"    text="Colaboradores"/>
-   
-   <l:gentext key="FlyerQuickstart" 
+
+   <l:gentext key="FlyerQuickstart"
    text="NOVELL&#x00AE; GUÍA DE INICIO R&#xc1;PIDO"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="Creado por SUSE&#x00AE; con XSL-FO"/>
@@ -19,7 +19,7 @@
 
    <l:gentext key="hyphenation-push-character-count" text="5"/>
    <l:gentext key="hyphenation-remain-character-count" text="5"/>
-   
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
@@ -46,6 +46,9 @@
    <l:gentext key="susecontact" text="Póngase en contacto con nosotros"/>
    <l:gentext key="version.info" text="Se aplica a "/>
    <l:gentext key="totopofpage" text="Inicio"/>
+
+   <l:gentext key="version" text="Versión"/>
+   <l:gentext key="Version" text="Versión"/>
 
    <l:gentext key="part" text="Parte"/>
 
@@ -164,8 +167,8 @@
       <l:template name="tab" text="&#x02192;|"/>
       <l:template name="up" text="&#x02191;"/><!-- uarr -->
    </l:context>
- 
- 
+
+
    <l:context name="datetime-full">
    	<l:template name="January" text="enero" lang="es" />
       <l:template name="February" text="febrero" lang="es" />
@@ -185,7 +188,7 @@
      <l:template name="dot.after.section" text=""/>
      <l:template name="dot.after.step" text=""/>
    </l:context>
-  
+
    <l:context name="datetime">
      <l:template name="titlepage.format" text="d/m/Y"/>
    </l:context>
