--- a/xslt_suse2/common/l10n/fr.xml
+++ b/xslt_suse2/common/l10n/fr.xml
@@ -45,6 +45,9 @@
    <l:gentext key="version.info" text="S'applique à "/>
    <l:gentext key="totopofpage" text="Haut"/>
 
+   <l:gentext key="version" text="Version"/>
+   <l:gentext key="Version" text="Version"/>
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
@@ -143,8 +146,8 @@
       <l:template name="tab" text="&#x02192;|"/>
       <l:template name="up" text="&#x02191;"/><!-- uarr -->
 	</l:context>
-		
-	
+
+
    <l:context name="datetime-full">
       <l:template name="January" text="Janvier" lang="fr" />
       <l:template name="February" text="F&#xe9;vrier" lang="fr" />
@@ -164,9 +167,9 @@
      <l:template name="dot.after.section" text=""/>
      <l:template name="dot.after.step" text=""/>
    </l:context>
-  
+
    <l:context name="datetime">
      <l:template name="titlepage.format" text="d/m/Y"/>
    </l:context>
-  
+
 </l:l10n>
