--- a/xslt_suse2/common/l10n/it.xml
+++ b/xslt_suse2/common/l10n/it.xml
@@ -43,6 +43,9 @@
    <l:gentext key="version.info" text="Si applica a "/>
    <l:gentext key="totopofpage" text="Su"/>
 
+   <l:gentext key="version" text="Versione"/>
+   <l:gentext key="Version" text="Versione"/>
+
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
@@ -153,7 +156,7 @@
       <l:template name="tab" text="&#x02192;|"/>
       <l:template name="up" text="&#x02191;"/><!-- uarr -->
    </l:context>
-   
+
     <l:context name="datetime-full">
       <l:template name="January" text="Gennaio" lang="it" />
       <l:template name="February" text="Febbraio" lang="it" />
@@ -166,14 +169,14 @@
       <l:template name="September" text="Settembre" lang="it" />
       <l:template name="October" text="Ottobre" lang="it" />
       <l:template name="November" text="Novembre" lang="it" />
-      <l:template name="December" text="Dicembre" lang="it" />  
+      <l:template name="December" text="Dicembre" lang="it" />
    </l:context>
 
    <l:context name="parameters">
      <l:template name="dot.after.section" text=""/>
      <l:template name="dot.after.step" text=""/>
    </l:context>
-  
+
    <l:context name="datetime">
      <l:template name="titlepage.format" text="d/m/Y"/>
    </l:context>
