--- a/xslt_suse2/common/l10n/pt_br.xml
+++ b/xslt_suse2/common/l10n/pt_br.xml
@@ -43,6 +43,9 @@
    <l:gentext key="version.info" text="Aplica-se a "/>
    <l:gentext key="totopofpage" text="Topo"/>
 
+   <l:gentext key="version" text="Versão"/>
+   <l:gentext key="Version" text="Versão"/>
+
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
@@ -159,7 +162,7 @@
       <l:template name="November" text="novembro" lang="pt_br" />
       <l:template name="December" text="dezembro" lang="pt_br" />
    </l:context>
-   
+
    <l:context name="datetime">
      <l:template name="titlepage.format" text="d/m/Y"/>
    </l:context>
