--- a/xslt_suse2/common/l10n/ru.xml
+++ b/xslt_suse2/common/l10n/ru.xml
@@ -43,6 +43,9 @@
    <l:gentext key="version.info" text="Относится к "/>
    <l:gentext key="totopofpage" text="Наверх"/>
 
+   <l:gentext key="version" text="Ве́рсия"/>
+   <l:gentext key="Version" text="Ве́рсия"/>
+
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
@@ -138,7 +141,7 @@
       <l:template name="tab" text="&#x02192;|"/>
       <l:template name="up" text="&#x02191;"/><!-- uarr -->
    </l:context>
- 
+
    <l:context name="parameters">
      <l:template name="dot.after.section" text=""/>
      <l:template name="dot.after.step" text=""/>
