Quell some messages about missing localisation & fix up Polish locale a little
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4193 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/suse2013/common/l10n/pl.xml
+++ b/suse2013/common/l10n/pl.xml
@@ -45,6 +45,25 @@
    <l:gentext key="version.info" text="Drukuj tę stronę"/>
    <l:gentext key="totopofpage" text="Do góry"/>
 
+   <l:context name="styles">
+      <l:template name="person-name" text="first-last"/>
+
+      <l:template name="example-label" text="Przykład&#160;%n:"/>
+      <l:template name="example-title" text="%t"/>
+      <l:template name="figure-label" text="Rysunek&#160;%n:"/>
+      <l:template name="figure-title" text="%t"/>
+      <l:template name="procedure-label" text="Procedura&#160;%n:"/>
+      <l:template name="procedure-title" text="%t"/>
+      <l:template name="table-label" text="Tabela&#160;%n:"/>
+      <l:template name="table-title" text="%t"/>
+      <l:template name="variablelist-label" text=""/>
+      <l:template name="variablelist-title" text="%t"/>
+      <l:template name="itemizedlist-label" text=""/>
+      <l:template name="itemizedlist-title" text="%t"/>
+      <l:template name="orderedlist-label" text=""/>
+      <l:template name="orderedlist-title" text="%t"/>
+   </l:context>
+
    <l:context name="xref">
       <l:template name="sect1" text="Sekcja &#8220;%t&#8221;"/>
       <l:template name="sect2" text="Sekcja &#8220;%t&#8221;"/>
