Added feedback from linguistic review (thanks Patrick!)
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4240 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/suse2013/common/l10n/nl.xml
+++ b/suse2013/common/l10n/nl.xml
@@ -9,6 +9,9 @@
    <l:gentext key="ListofAuthors"   text="Lijst met auteurs"/>
    <l:gentext key="Contributor"     text="Medewerker"/>
    <l:gentext key="Contributors"    text="Medewerkers"/>
+  
+   <l:gentext key="PubDate" text="Publicatiedatum"/>
+   <l:gentext key="pubdate" text="publicatiedatum"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; BEKNOPTE HANDLEIDING"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
