Added feedback from linguistic review (thanks Patrick!)
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4241 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/suse2013/common/l10n/sv.xml
+++ b/suse2013/common/l10n/sv.xml
@@ -9,6 +9,8 @@
    <l:gentext key="ListofAuthors"   text="Lista &#246;ver f&#246;rfattare"/>
    <l:gentext key="Contributor"     text="Deltagare"/>
    <l:gentext key="Contributors"    text="Deltagare"/>
+   <l:gentext key="PubDate" text="Publiceringsdatum"/> 
+   <l:gentext key="pubdate" text="publiceringsdatum"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; SNABBSTARTSKORT"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
