Fixed intra book refs
Now there is a special mode intra.title.markup which traverse the tree
up to the book node.
Each template with mode="intra.title.markup" calls the gentext.template
with the name "intra-local-name()" to customize its appearance.

For example, referencing a sect2 in another book, does the following
things:

1. Matches the sect2 template in mode="intra.title.markup"
2. Calls the ancestors of chapter, appendix etc. also in the same mode
   to insert the division and book reference
3. Gets the template for "intra-sect2" in the xref context
4. Substitutes the template from step 3


git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4242 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/suse2013/common/l10n/zh_cn.xml
+++ b/suse2013/common/l10n/zh_cn.xml
@@ -135,6 +135,17 @@
       <l:template name="December" text="12" lang="zh_cn"/>
    </l:context>
 
+   <l:context name="xref">
+     <l:template name="intra-article" text="《%t》文章 "/>
+     <l:template name="intra-book" text="《%t》第 "/>
+     <l:template name="intra-chapter" text="%n 章“%t”中的第"/>
+     <!--<l:template name="intra-part" text="%B %t"/>-->
+     <l:template name="intra-sect1" text="%n 节“%t”"/>
+     <l:template name="intra-sect2" text="%n 节“%t”"/>
+     <l:template name="intra-sect3" text="%n 节“%t”"/>
+     <l:template name="intra-sect4" text="%n 节“%t”"/>
+   </l:context>
+
    <l:context name="title-numbered">
       <l:template name="chapter" text="&#31532;&#160;%n&#160;&#31456;%t"/>
    </l:context>
